--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ loader_version=0.16.5
 mod_version=1.0.0
 maven_group=net.reimaden
 archives_base_name=unkindled
+version_range=1.21,1.21.1
 
 # Dependencies
 fabric_version=0.105.0+1.21.1
