Port to NeoForge

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,23 @@
-# Done to increase the memory available to gradle.
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.caching=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+# Environment Properties
+parchment_minecraft_version=1.21
+parchment_mappings_version=2024.07.28
 minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.5
+minecraft_version_range=[1.21, 1.22)
+neo_version=21.1.66
+neo_version_range=[21.1.0,)
+loader_version_range=[4,)
 
 # Mod Properties
+mod_id=unkindled
+mod_name=Unkindled
+mod_license=MIT
 mod_version=1.2.0
-maven_group=net.reimaden
-archives_base_name=unkindled
-version_range=1.21,1.21.1
-
-# Dependencies
-fabric_version=0.105.0+1.21.1
+mod_group_id=net.reimaden
+mod_authors=Maxmani
+mod_description=Makes furnaces require manual ignition to work, and campfires are placed unlit.
