--- a/build.gradle
+++ b/build.gradle
@@ -193,6 +193,15 @@ java {
     withSourcesJar()
 }
 
+jar {
+    from("LICENSE")
+}
+
+static def addMinecraftVersions(versionsContainer) {
+    versionsContainer.add("1.21")
+    versionsContainer.add("1.21.1")
+}
+
 publishMods {
     def versionAsNumber = project.mod_version.replaceAll("\\.", "")
     changelog = "Check the changelog on [GitHub](https://github.com/Reimaden-Modding/unkindled/blob/HEAD/CHANGELOG.md#" + versionAsNumber + ")"
@@ -206,16 +215,14 @@ publishMods {
     modrinth {
         accessToken = providers.environmentVariable("MODRINTH_TOKEN")
         projectId = "ozHCnpcZ"
-        minecraftVersions.add("1.21")
-        minecraftVersions.add("1.21.1")
+        addMinecraftVersions(minecraftVersions)
         projectDescription = providers.fileContents(layout.projectDirectory.file("README.md")).asText
     }
 
     curseforge {
         accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
         projectId = "1118464"
-        minecraftVersions.add("1.21")
-        minecraftVersions.add("1.21.1")
+        addMinecraftVersions(minecraftVersions)
         clientRequired = false
         serverRequired = true
     }
